tests/vertical-slice/accept/assert_ne.hew
fn main() -> i64 {
    assert_ne(2, 3);
    0
}
