tests/vertical-slice/reject/duplicate_short_name.hew
import alpha;
import beta::alpha;

fn main() -> i64 { 0 }
